--- a/index.html
+++ b/index.html
@@ -123,80 +123,40 @@
         </div>
         <button class="btn enrol-btn">View All</button>
     </section>
+    <section class="marq-line">
+        <marquee class="marq" behavior="title" direction="left" scrollamount="6">
+            This website may look different as i build this as considering my device screen size
+        </marquee>
+    </section>
 
-
-    <!-- <section class="our-stories">
-        <h1>Our Stories</h1>
-        <div class="all-story">
-            <div class="story" id="story-1">
-                <div class="big-img">
-                    <img src="assets/story-1.png" alt="">
-                </div>
-                <div class="date">
-                    <p>November 19, 2019</p>
-                </div>
-                <div class="content">
-                    <h3>A fun toddler coloring training on
-                        classroom</h3>
-                    <p>Beautiful branding for changes by Never Now in Australia.
-                        changes is a platform for open discussion in an inclusive and
-                        collaborative environment, providing the...</p>
-                </div>
+    <section class="footer">
+        <div class="footer-left">
+            <div class="logo">
+                <img class="logo-2" src="assets/logo2.png" alt="logo">
+                <a href="#"><h1 id="footer-logo" style="color: white;">Kids <br> Education</h1></a>
             </div>
-            <div class="story-grp">
-                <div class="story" id="story-2">
-                    <div class="img">
-                    <img src="assets/story-1.png" alt="">
-                </div>
-                <div class="date">
-                    <p>November 19, 2019</p>
-                </div>
-                <div class="content">
-                    <h3>A fun toddler coloring training on
-                        classroom</h3>
-                </div>
-                </div>
-                <div class="story" id="story-3">
-                    <div class="img">
-                    <img src="assets/story-1.png" alt="">
-                </div>
-                <div class="date">
-                    <p>November 19, 2019</p>
-                </div>
-                <div class="content">
-                    <h3>A fun toddler coloring training on
-                        classroom</h3>
-                </div>
-                </div>
-                <div class="story" id="story-4">
-                    <div class="img">
-                    <img src="assets/story-1.png" alt="">
-                </div>
-                <div class="date">
-                    <p>November 19, 2019</p>
-                </div>
-                <div class="content">
-                    <h3>A fun toddler coloring training on
-                        classroom</h3>
-                </div>
-                </div>
-                <div class="story" id="story-5">
-                    <div class="img">
-                    <img src="assets/story-1.png" alt="">
-                </div>
-                <div class="date">
-                    <p>November 19, 2019</p>
-                </div>
-                <div class="content">
-                    <h3>A fun toddler coloring training on
-                        classroom</h3>
-                </div>
-                </div>
-                
+            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+        </div>
+        <div class="footer-midle">
+            <h1 class="footer-title">About School</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Facilities</a></li>
+                <li><a href="#">Admission</a></li>
+            </ul>
+        </div>
+        <div class="footer-right">
+            <h1 class="footer-title">Keep in Touch</h1>
+            <div class="icons">
+                <img src="assets/fb.png" alt="">
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/twitter.png" alt="">
+                <img src="assets/google+.png" alt="">
             </div>
         </div>
-        <button class="btn">View All</button>
-    </section> -->
+    </section>
+
 
 </body>
 </html>
