--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="logo">
             <img src="assets/logo.png" alt="logo">
-            <a href="#"><h1>SCHOOL</h1></a>
+            <a href="#"><h1>K.SCHOOL</h1></a>
         </div>
         <div class="links">
             <ul>
@@ -34,7 +34,7 @@
             Student from small <br>
             age <span class="blue">towards vision</span></h1>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ratione, officiis dolore enim nobis voluptates expedita eos, distinctio unde quidem mollitia nulla atque ab omnis, error eveniet rem provident. A?</p>
+            <p>we are dedicated to fostering a nurturing and stimulating environment where young minds can thrive. Our school is designed to provide a safe, inclusive, and engaging space for children to embark on their educational journey.</p>
             <button class="btn enrol-btn">Enroll Now</button>
         </div>
         <div class="banner">
@@ -47,20 +47,20 @@
         <div class="carts">
             <div class="box cart1">
                 <img src="assets/kinder.png" alt="">
-                <h1 class="subtitle">Kinder (3-6) years</h1>
-                <p>Cum sociis natoque penatibus et magnis</p>
+                <h1 class="subtitle">Kinder (3-6) Years</h1>
+                <p>Our Early Learners program is tailored for the youngest minds in our community. We focus on creating a playful, safe, and engaging environment that nurtures curiosity and a love for learning</p>
                 <a href="#" class="read-more">Read More</a>
             </div>
             <div class="box cart2">
                 <img src="assets/kinder.png" alt="">
-                <h1 class="subtitle">Kinder (3-6)</h1>
-                <p>dis parturient montes, nascetur ridiculus</p>
+                <h1 class="subtitle">Elementary School</h1>
+                <p>Our Primary Learners program builds upon the foundations established in the early years, focusing on more structured learning experiences. We aim to develop critical thinking, creativity.</p>
                 <a href="#" class="read-more" style="color: rgb(240, 170, 0);">Read More</a>
             </div>
             <div class="box cart3">
                 <img src="assets/kinder.png" alt="">
-                <h1 class="subtitle">Kinder (3-6)</h1>
-                <p>dis parturient montes, nascetur ridiculus</p>
+                <h1 class="subtitle">Middle (10-16) Years</h1>
+                <p>Our Junior Achievers program prepares students for the challenges of higher education. We offer a supportive and stimulating environment that encourages academic excellence and personal growth</p>
                 <a href="#" class="read-more" style="color: rgb(135, 0, 255);">Read More</a>
             </div>
         </div>
@@ -76,7 +76,7 @@
             <div class="big-cart">
                 <div class="story-cart" id="story-1">
                     <img src="assets/story-1.png" alt="">
-                    <p>November 19, 2020</p>
+                    <p>November 19, 2019</p>
                     <div class="story-txt">
                         <h1>A fun toddler coloring training on
                             classroom</h1>
@@ -88,41 +88,39 @@
             </div>
             <div class="grp-cart">
                 <div class="story-cart" id="story-2">
-                    <img src="assets/story-1.png" alt="">
-                    <p>November 19, 2020</p>
+                    <img src="assets/story-2.png" alt="">
+                    <p>January 03, 2020</p>
                     <div class="story-txt">
-                        <h1>A fun toddler coloring training on
-                            classroom</h1>       
+                        <h1>Childrens are practicing cleaning</h1>       
                     </div>
                 </div>
                 <div class="story-cart" id="story-3">
-                    <img src="assets/story-1.png" alt="">
-                    <p>November 19, 2020</p>
+                    <img src="assets/story-3.png" alt="">
+                    <p style="background-color: rgb(93, 88, 240);">June 19, 2020</p>
                     <div class="story-txt">
-                        <h1>A fun toddler coloring training on
-                            classroom</h1>
+                        <h1>Boys are enjoing the Sports season</h1>
                     </div> 
                 </div>
                 <div class="story-cart" id="story-4">
-                    <img src="assets/story-1.png" alt="">
-                    <p>November 19, 2020</p>
+                    <img src="assets/story-4.png" alt="">
+                    <p>November 19, 2021</p>
                     <div class="story-txt">
-                        <h1>A fun toddler coloring training on
-                            classroom</h1>
+                        <h1>A fun capturing moment of costume party</h1>
                     </div> 
                 </div>
                 <div class="story-cart" id="story-5">
-                    <img src="assets/story-1.png" alt="">
-                    <p>November 19, 2020</p>
+                    <img src="assets/story-5.png" alt="">
+                    <p>August 19, 2022</p>
                     <div class="story-txt">
-                        <h1>A fun toddler coloring training on
-                            classroom</h1>
+                        <h1>Group study for the upcoming exam</h1>
                     </div> 
                 </div>
             </div>
         </div>
         <button class="btn enrol-btn">View All</button>
     </section>
+
+
     <section class="marq-line">
         <marquee class="marq" behavior="title" direction="left" scrollamount="6">
             This website may look different as i build this as considering my device screen size
@@ -135,7 +133,7 @@
                 <img class="logo-2" src="assets/logo2.png" alt="logo">
                 <a href="#"><h1 id="footer-logo" style="color: white;">Kids <br> Education</h1></a>
             </div>
-            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            <p>At Kids School, we're always here to support our community. Stay connected with us through our various channels.</p>
         </div>
         <div class="footer-midle">
             <h1 class="footer-title">About School</h1>
