--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
     
     <section class="our-story">
-        <h1 class="story-title">Our Story</h1>
+        <h1 class="story-title">Our Stories</h1>
         <div class="stories">
             <div class="big-cart">
                 <div class="story-cart" id="story-1">
@@ -122,7 +122,7 @@
 
 
     <section class="marq-line">
-        <marquee class="marq" behavior="title" direction="left" scrollamount="6">
+        <marquee class="marq" behavior="title" direction="left" scrollamount="10">
             This website may look different as i build this as considering my device screen size
         </marquee>
     </section>
@@ -147,14 +147,20 @@
         <div class="footer-right">
             <h1 class="footer-title">Keep in Touch</h1>
             <div class="icons">
-                <img src="assets/fb.png" alt="">
-                <img src="assets/dribble.png" alt="">
-                <img src="assets/twitter.png" alt="">
-                <img src="assets/google+.png" alt="">
+                <a href="">
+                    <img src="assets/fb.png" alt="">
+                </a>
+                <a href="">
+                    <img src="assets/dribble.png" alt="">
+                </a>
+                <a href="">
+                    <img src="assets/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="assets/google+.png" alt="">
+                </a>
             </div>
         </div>
     </section>
-
-
 </body>
 </html>
